<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SaveABuck</string>
    <string name="categorias_button">Categorias</string>
    <string name="dummy_content">SaveABuck</string>
    <string name="contas_button">Contas</string>
    <string name="lancamento_button">Lançamentos</string>
    <string name="pesquisalancamento_button">Pesquisas Lançamentos</string>
    <string name="manutencaolancamento_button">Manutenção de Lançamentos</string>
    <string name="title_activity_menu_principal">SaveABuck</string>
    <string name="action_settings">Settings</string>
    <string name="cancel">Cancelar</string>
    <string name="title_activity_categorias">Categorias</string>
    <string name="add_button">+</string>
    <string name="categoria_title">Categoria:</string>
    <string name="categoria_hint">Digite a nova categoria</string>
    <string name="title_activity_contas">Contas</string>
    <string name="contas_header">Conta:</string>
    <string name="contas_hint">Digite a nova conta</string>
    <string name="title_activity_lancamento">Lancamento</string>
    <string name="lancamento_header">Valor:</string>
    <string name="transaction_hint">New value</string>
    <string name="title_activity_add_conta">AddConta</string>
    <string name="conta_addconta">+</string>
    <string name="addconta_hint">Nova conta</string>
    <string name="title_activity_add_transaction">AddTransactionActivity</string>
    <string name="hello_world">Hello world!</string>

</resources>
